--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -1,7 +1,6 @@
 name: fill-diff
 on: [pull_request]
 jobs:
-
   changedfiles:
     runs-on: ubuntu-latest
     # Map a step output to a job output
@@ -9,9 +8,11 @@ jobs:
       all: ${{ steps.changes.outputs.all}}
       ts: ${{ steps.changes.outputs.ts }}
     steps:
-        # Make sure we have some code to diff.
+      # Make sure we have some code to diff.
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
       - name: Get changed files
         id: changes
         # Set outputs using the command.
