--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -17,10 +17,7 @@ jobs:
         id: changes
         # Set outputs using the command.
         run: |
-          git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$ | xargs
           echo "::set-output name=all::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
-          echo "::set-output name=ts::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$ | xargs)"
-  lint:
     runs-on: ubuntu-latest
     # require the first job to have ran
     needs: changedfiles
@@ -28,4 +25,4 @@ jobs:
     if: ${{needs.changedfiles.outputs.ts}}
     steps:
       - name: echo changed files
-        run: echo ${{needs.changedfiles.outputs.ts}}
+        run: echo ${{needs.changedfiles.outputs.all}}
