--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Get changed files
         id: changes
         # Set outputs using the command.
-        run: echo "::set-output name=all::$(git diff --color=always|perl -wlne 'print $1 if /^\e\[31m-(.*)\e\[m$/' ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
+        run: echo "::set-output name=all::$(git diff --color=always|perl -wlne 'print $1 if /^\e\[31m-(.*)\e\[m$/')"
         # Checks if there is a difference and stores as accessible output by if highlighted green/red
   lint:
     runs-on: ubuntu-latest
