--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Get changed files
         id: changes
         # Set outputs using the command.
-        run: echo "::set-output name=all::$(git diff --color=always|perl -wlne 'print $1 if /^\e\[31m-(.*)\e\[m$/' | xargs)"
+        run: echo "::set-output name=all::$(git diff -U0 --color | grep '^\e\[[^m]*m[-+]' | grep -Ev '(--- a/|\+\+\+ b/)' | xargs)"
         # Checks if there is a difference and stores as accessible output by if highlighted green/red
   lint:
     runs-on: ubuntu-latest
