Trial diff x colour and no context to get specific values

--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -16,8 +16,10 @@ jobs:
       - name: Get changed files
         id: changes
         # Set outputs using the command.
-        run: echo "::set-output name=all::$(git diff -U0 --color | grep '^\e\[[^m]*m[-+]' | grep -Ev '(--- a/|\+\+\+ b/)' | xargs)"
-        # Checks if there is a difference and stores as accessible output by if highlighted green/red
+        run: |
+        git diff -U0 --color | grep '^\e\[[^m]*m[-+]' | grep -Ev '(--- a/|\+\+\+ b/)'
+        echo "::set-output name=all::$(git diff -U0 --color | grep '^\e\[[^m]*m[-+]' | grep -Ev '(--- a/|\+\+\+ b/)' | xargs)"
+      # Checks if there is a difference and stores as accessible output by if highlighted green/red
   lint:
     runs-on: ubuntu-latest
     # require the first job to have ran
