Trial diff x colour and no context to get specific values

--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Get changed files
         id: changes
         # Set outputs using the command.
-        run: (git diff -U0 --color | grep '^\e\[[^m]*m[-+]' | grep -Ev '(--- a/|\+\+\+ b/)' | xargs)
+        run: git diff -U0 --color | grep '^\e\[[^m]*m[-+]' | grep -Ev '(--- a/|\+\+\+ b/)' | xargs
         # Checks if there is a difference and stores as accessible output by if highlighted green/red
   lint:
     runs-on: ubuntu-latest
