Narrow down non-return issue

--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Get changed files
         id: changes
         # Set outputs using the command.
-        run: git diff --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} -U0 | xargs
+        run: git diff --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} -U0  | grep '^[+-]' | grep -Ev '^(--- a/|\+\+\+ b/)' | xargs
         # Checks if there is a difference and stores as accessible output by if highlighted green/red
   lint:
     runs-on: ubuntu-latest
