--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Get changed files
         id: changes
         # Set outputs using the command.
-        run: git diff --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} -U0 | grep 'review_date:' | cut -d\   -f2
+        run: git diff --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} -U0 | grep 'review_date:' | cut -d\ -f2
         # Checks if there is a difference and stores as accessible output by if highlighted green/red
   lint:
     runs-on: ubuntu-latest
@@ -27,3 +27,8 @@ jobs:
     steps:
       - name: echo changed files
         run: echo ${{needs.changedfiles.outputs.all}}
+          datediff() {
+          d1=$(date -d "$1" +%s)
+          d2=$(date -d "$2" +%s)
+          echo $(( (d1 - d2) / 86400 )) days
+          }
