--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -20,7 +20,7 @@ jobs:
           echo "::set-output name=olddate::$(git diff --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} -U0 | grep 'review_date:' | cut -d\  -f2 | tail -n +2| head -n 1)"
           echo "::set-output name=newdate::$(git diff --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} -U0 | grep 'review_date:' | cut -d\  -f2 | tail -n 1)"
       - name: test dates
-        run: >
+        run: |
           python3 -c \
           'from datetime import datetime as dt;'\
           'date_diff = dt.strptime(needs.changedfiles.outputs.newdate, "%Y-%m-%d") - dt.strptime(needs.changedfiles.outputs.olddate, "%Y-%m-%d")'
