--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -27,6 +27,6 @@ jobs:
           python3 -c \
           'from datetime import datetime as dt;'\
           'import os;'\
-          'print(os.environ["GITHUB_NEW_DATE"],os.environ["GITHUB_OLD_DATE"]);'\
-          'date_diff = dt.strptime(os.environ["GITHUB_NEW_DATE"], "%Y-%m-%d") - dt.strptime(os.environ["GITHUB_OLD_DATE"], "%Y-%m-%d")'
+          'print(os.getenv["GITHUB_NEW_DATE"],os.getenv["GITHUB_OLD_DATE"]);'\
+          'date_diff = dt.strptime(os.getenv["GITHUB_NEW_DATE"], "%Y-%m-%d") - dt.strptime(os.getenv["GITHUB_OLD_DATE"], "%Y-%m-%d")'
           'if data_diff.days > 92: raise ValueError("date diff to high");'\
