--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -22,7 +22,10 @@ jobs:
         run: |
           echo "${{ env.GITHUB_OLD_DATE }}"
       - name: test dates
+        env:
+          GITHUB_OLD_DATE: ${{ env.GITHUB_OLD_DATE }}
         run: |
+          GITHUB_OLD_DATE
           python3 -c \
           'from datetime import datetime as dt;'\
           'import os;'\
