--- a/.github/workflows/test-diff.yml
+++ b/.github/workflows/test-diff.yml
@@ -1,12 +1,11 @@
 name: fill-diff
 on: [pull_request]
 jobs:
-  changedfiles:
+  oldfiles:
     runs-on: ubuntu-latest
     # Map a step output to a job output
     outputs:
       olddate: ${{ steps.changes.outputs.olddate}}
-      newdate: ${{ steps.changes.outputs.newdate }}
     steps:
       # Make sure we have some code to diff.
       - name: Checkout repository
@@ -17,17 +16,19 @@ jobs:
         id: changes
         # Set outputs using the command.
         run: |
-          echo "GITHUB_OLD_DATE=$(git diff --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} -U0 | grep 'review_date:' | cut -d\  -f2 | tail -n +2| head -n 1)" >> $GITHUB_ENV
-      - name: test-changed-files
+          git diff --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} -U0 | grep 'review_date:' | cut -d\  -f2 | tail -n +2 >> gitdiff_dates.csv
+          echo "GITHUB_OLD_DATE=$(echo $(head -1 gitdiff_dates.csv))" >> $GITHUB_ENV
+          echo "GITHUB_NEW_DATE=$(echo $(tail -1 gitdiff_dates.csv))" >> $GITHUB_ENV
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
         run: |
-          echo "${{ env.GITHUB_OLD_DATE }}"
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: test dates
         env:
           GITHUB_OLD_DATE: ${{ env.GITHUB_OLD_DATE }}
-        run: |
-          python3 -c \
-          'from datetime import datetime as dt;'\
-          'import os;'\
-          'print(os.getenv('GITHUB_OLD_DATE'));'\
-          '#date_diff = dt.strptime(os.environ['GITHUB_NEW_DATE'], "%Y-%m-%d") - dt.strptime(os.environ['GITHUB_OLD_DATE'], "%Y-%m-%d")'
-          '#if data_diff.days > 92: raise ValueError("date diff to high");'\
+          GITHUB_NEW_DATE: ${{ env.GITHUB_NEW_DATE }}
+        run: python ./.github/workflows/scripts/compare_review_dates.py
